# aspire_ai

./: SECURITY.md  package-lock.json  playwright.config.ts  railway.json
.github/workflows/: codeql.yml
OpenTutor-main/: README.md  docker-compose.yml  render.yaml
OpenTutor-main/.github/ISSUE_TEMPLATE/: bug_report.md  question.md
OpenTutor-main/.github/workflows/: ci.yml
OpenTutor-main/apps/api/: Dockerfile  cli.py  main.py  requirements-core.txt  requirements-full.txt
OpenTutor-main/apps/api/libs/: logging_setup.py
OpenTutor-main/apps/api/middleware/: tracing.py
OpenTutor-main/apps/api/routers/: export.py  ui.py  upload_processing.py
OpenTutor-main/apps/api/schemas/: learner_profile.py
OpenTutor-main/apps/web/: Dockerfile  package-lock.json
OpenTutor-main/docs/: PRD.md  SPEC.md  architecture-decisions.md  competitive-analysis.md  local-single-user.md  troubleshooting.md
OpenTutor-main/marketing/health/: 2026-03-26-report.md  2026-04-02-report.md
OpenTutor-main/scripts/: quickstart.ps1  quickstart.sh  release_rehearsal_round.sh  smoke_test.sh
OpenTutor-main/tests/: locustfile.py  test_api_integration.py  test_api_unit_basics.py  test_sqlite_mode.py
OpenTutor-main/tests/e2e/: onboarding.spec.ts  persistence.spec.ts
apps/api/: Dockerfile  config.py  database.py  main.py  pyproject.toml  requirements-core.txt  requirements-full.txt  requirements.txt
apps/api/libs/: url_validation.py
apps/api/middleware/: security.py
apps/api/services/activity/: redis_notify.py
apps/api/services/agent/: __init__.py  state.py
apps/api/services/agent/agents/: tutor.py
apps/api/services/agent/tools/: assessment_tools.py
apps/api/services/export/: anki_export.py
apps/api/services/parser/: notes.py
apps/web/: next.config.ts  package-lock.json  package.json
docs/: deployment-guide.md  public-beta-release-notes.md
marketing/community/: 2026-03-31-posts.md
scripts/: _common.sh  benchmark.py  check_ci_stability.sh  check_local_mode.sh  dev_local.sh  install.sh
tests/: test_security_regressions_authz.py
tests/e2e/: course-flow.spec.ts  dashboard.spec.ts  setup-quick-start.spec.ts
(+48 files in other folders)
