[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aspire"
version = "0.1.0"
description = "aspire Zenus — your local AI learning assistant"
readme = "../../README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["ai", "education", "learning", "tutor", "local-first"]

dependencies = [
    # Core
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "python-multipart>=0.0.27",
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",

    # Database core (SQLite local mode)
    "sqlalchemy[asyncio]>=2.0.49",
    "aiosqlite>=0.20.0",

    # LLM (Ollama — zero-config local inference)
    "openai>=1.50.0",
    "httpx>=0.27.0",

    # Workflow
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",

    # File parsing
    "beautifulsoup4>=4.14.3",
    "python-pptx>=1.0.0",
    "python-docx>=1.2.0",
    "filetype>=1.2.0",

    # Utilities
    "tiktoken>=0.12.0",
    "xxhash>=3.7.0",
    "thefuzz>=0.22.0",
    "tenacity>=9.1.4",
    "python-dotenv>=1.2.2",
    "sse-starlette>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
cloud = [
    "anthropic>=0.97.0",
]
full = [
    "aspire[cloud]",
    "crawl4ai>=0.4.0",
    "trafilatura>=2.0.0",
    "python-magic>=0.4.27",
    "apscheduler>=3.10.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "redis>=5.2.0",
    "mcp>=1.0.0",
    "pluggy>=1.5.0",
    "tavily-python>=0.5.0",
    "genanki>=0.13.0",
    "icalendar>=6.0.0",
]

[project.scripts]
aspire = "cli:main"

[tool.setuptools]
py-modules = [
    "cli",
    "database",
    "main",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "config*",
    "models*",
    "routers*",
    "services*",
    "libs*",
    "middleware*",
    "schemas*",
    "skills*",
    "prompts*",
    "utils*",
]
exclude = ["tests*", "alembic*", "uploads*", "sessions*", "plugins*"]

[tool.ruff.lint]
select = ["E", "F", "W", "BLE001"]
# BLE001: Do not catch blind exception: `Exception`
